[package]
name = "Rucolla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "board_server"
path = "src/board_server.rs"

[dependencies]
log = "0.4"
rayon = "1.5"
rand = "0.8"
tokio = {version = "1.20", features = ["full"]}
futures = "0.3"
bytes = "1"