[package]
name = "Rucolla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "blackboard_lib"

[[bin]]
name = "board_client"
path = "src/main.rs"

[[bin]]
name = "board_server"
path = "src/board_server.rs"

[dependencies]
log = "0.4"
rayon = "1.5"
rand = "0.8"
tokio = {version = "1.20", features = ["full"]}
futures = "0.3"
bytes = "1"
warp = "0.3"
# piston renderer
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
piston_window = "0.124"
find_folder = "0.3"